# ArqonBus

./: .codecov.yml  .coveragerc  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Cargo.toml  PATENT.md  README.md  SECURITY.md  SESSION_HANDOFF.md  SUPPORT_MATRIX.md  adversarial_logic_test.py  benchmark_output.txt  fix_performance_metrics.py  mkdocs.yml  output.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  repair_notebook.py  run_tests.sh  rust-toolchain.toml  setup_env.sh  test_chutes.py  truth_state.json
.agent/workflows/: constitution.md  debug.md  implement.md  plan.md  specify.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.specify.md  speckit.tasks.md
.codex/: config.toml
.github/workflows/: arqonbus-tests.yml  ci-elixir.yml  ci-rust.yml  docker-publish.yml
.roo/rules/: specify-rules.md
.specify/memory/: constitution.md
ArqonHPO/: requirements.txt
ArqonHPO/docs/: SDD.md  rpzl_adjoint_hybrid.ipynb
ArqonHPO/scripts/: append_benchmark_v2.py  append_final_boss_results.py  append_grand_challenge.py  append_hybrid_results.py  append_notebook_results.py  append_product_code.py  append_selection_guide.py  append_speed_results.py  benchmark_grand_challenge.py  benchmark_hybrid.py  benchmark_hybrid_hard.py  benchmark_structure_speed.py  verify_arqon_meta_solver.py  verify_rpzl_2d.py  verify_rpzl_optimization.py  verify_rpzl_optimization_v2.py
ArqonHPO/src/: arqon_hpo.py
ArqonHPO_codex/: Cargo.toml  Constitution.md  README.md  SDD.md  setup.py
ArqonHPO_codex/docs/: rpzl_adjoint_hybrid.ipynb
ArqonHPO_codex/scripts/: append_guide.py  append_speed.py
ArqonHPO_codex/src/: twist_prototype.py
benchmarks/: live_rsi_test.py  rsi_demonstration.py
crates/: Cargo.toml
crates/arq-cli/: Cargo.toml
crates/operators/: Cargo.toml
crates/operators/src/: cron.rs  webhook.rs
crates/proto/: Cargo.toml  build.rs
crates/shield/: Cargo.toml
crates/shield/benches/: hot_path.rs
crates/shield/policies/: README.md  block_empty.wasm  block_empty.wat
crates/shield/src/: lib.rs  main.rs  telemetry.rs
crates/shield/src/auth/: jwt.rs
crates/shield/src/handlers/: socket.rs
crates/shield/src/middleware/: mod.rs  schema.rs  wasm.rs
crates/shield/src/policy/: abi.rs  engine.rs  mod.rs
crates/shield/src/registry/: mod.rs  schema_store.rs  validator.rs
crates/shield/src/router/: mirroring.rs  mod.rs  nats_bridge.rs
crates/shield/tests/: e2e_fail_closed.rs  e2e_policy_flow.rs  e2e_ws_policy_flow.rs  integration_auth_schema.rs  middleware_chain.rs  nats_subject_routing.rs  regression_fail_closed.rs  regression_payload_extraction.rs  regression_startup_wiring.rs  tenant_isolation.rs  ws_auth_integration.rs
crates/voltron-core/: Cargo.toml
deploy/: docker-compose.yml
deploy/nats/: nats.conf
docs/: api.md  architecture.md  arqon_ecosystem.md  arqonbus_v1_scope.md  completion_report.md  configuration.md  developers_guide.md  index.md  mkdocs_setup.md  quickstart.md  runbook.md  tutorial.md
docs/ArqonBus/: engineering_secrets.md  vnext_plan.md  vnext_status.md
docs/casil/: api-reference.md  best-practices.md  configuration.md  getting-started.md  index.md  monitoring.md  redaction.md
docs/emergenics/: COMPILATION.md  arqonbus_vnext.md  arqonbus_vnext_circuits_and_roles.md  constitution.md  emergence_demos_summary.md  emergence_engineering.md  emergence_engineering_summary.md  gnlna_summary.md  prime_twist_models.md  primes.md  review_plan.md  rpzl.md  source_registry.md  specification.md  spectral_computation.md  system_fabric.md  ttc.md
docs/guides/: test_websocket_and_casil.md
docs/projects/: arqon_ecosystem.md  arqonmesh.md  arqonreflex.md  arqontech.md  deltas.md  deltas_example.md  fabric.md  grid.md  levers.md  moonshots.md  network_automaton.md  problems_promise.md  proto-intelligence-initial.md  six_steps.md  who_for.md
docs/specs/: constitution.md
examples/python/: hello_world_bot.py  simple_client.py
notebooks/: arqonhpo_experiments_01.ipynb
proto/: ago.proto
reports/: conflicts_20260219T100412Z.txt
scripts/: build_release.sh  check_protobuf_lock.sh  deploy_sim.sh  validate_epoch1_wscat.sh
scripts/ci/: check_protobuf_first.py
scripts/manual_checks/: inspect_ws_connection.py  postgres_connection_check.py  redis_connection_check.py  rollout_smoke_check.sh  telemetry_stability_check.py
scripts/migrations/: 20260220_continuum_projector_postgres.sql
sdks/python/: pyproject.toml
sdks/python/arqon/: __init__.py
specs/: operator_model_v1.md
specs/001-core-message-bus/: data-model.md  quickstart.md  spec.md  tasks.md
specs/003-core-spine/: plan.md  (+2 more)
src/: truth_state.json
stylesheets/: extra.css
temp/: ws_client.py
tests/: conftest.py  test_basic.py  test_dispatch_e2e.py  test_dispatch_integration.py  test_dispatcher.py  test_legacy_dispatch.py  test_operator_sam.py  test_server_api.py  test_simple.py
verification/: e2e_suite.py  load_test.js
(+238 files in other folders)
