[workspace]
resolver = "2"
members = [
    "crates/shield",
    "crates/proto",
    "crates/voltron-core",
    "crates/arq-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NovelByte Labs <eng@novelbyte.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
prost = "0.12"
wasmtime = "16.0"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
