[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arqonbus"
version = "0.1.0"
description = "ArqonBus service"
requires-python = ">=3.10"
dependencies = [
    "websockets",
    "aiohttp",
    "redis",
    "asyncpg",
    "pydantic",
    "python-dotenv"
]

[project.scripts]
arqon = "arqonbus.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "black",
    "isort"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.arqon.relationships]
parent = "Arqon"
children = []
