[package]
name = "operators"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "op-webhook"
path = "src/webhook.rs"

[[bin]]
name = "op-cron"
path = "src/cron.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-nats = "0.33"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
