[package]
name = "shield-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "hot_path"
harness = false

[dependencies]
prost = "0.12"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
